# Rust-crypto_ios_android

./: README.md
Android/CryptoDemo/: build.gradle  settings.gradle
Android/CryptoDemo/app/: build.gradle  proguard-rules.pro
Android/CryptoDemo/app/src/androidTest/java/com/comtasoft/cryptodemo/: ExampleInstrumentedTest.java  ExampleInstrumentedTest.kt
Android/CryptoDemo/app/src/main/: AndroidManifest.xml
Android/CryptoDemo/app/src/main/java/com/comtasoft/cryptodemo/: MainActivity.java  MainActivity.kt
Android/CryptoDemo/app/src/main/res/layout/: activity_main.xml
Android/CryptoDemo/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
Android/CryptoDemo/app/src/main/res/values-night/: themes.xml
Android/CryptoDemo/app/src/test/java/com/comtasoft/cryptodemo/: ExampleUnitTest.java  ExampleUnitTest.kt
Android/CryptoDemo/gradle/wrapper/: gradle-wrapper.properties
Backend/: cargo-config.toml  cargo-config.toml.template.new.linux  cargo-config.toml.template.new.mac  create-ndk-build-info-linux.sh  create-ndk-build-info-mac.sh  create-ndk-standalone-ndk-r18.sh  create-ndk-standalone.sh
Backend/libs/rust-crypto-0.2.40/: Cargo.toml
Backend/libs/rust-crypto-0.2.40/src/: aes.rs  aes_gcm.rs  aesni.rs  aesni_helpers.c  aessafe.rs  bcrypt.rs  bcrypt_pbkdf.rs  blake2b.rs  blockmodes.rs  buffer.rs  chacha20poly1305.rs  cryptoutil.rs  ed25519.rs  hkdf.rs  mac.rs  md5.rs  pbkdf2.rs  poly1305.rs  salsa20.rs  util.rs  util_helpers.c
Backend/libs/rust-crypto-0.2.41/: Cargo.toml  build.rs
Backend/libs/rust-crypto-0.2.41/src/: aes.rs  aes_gcm.rs  aesni.rs  aesni_helpers.asm  aesni_helpers.c  aessafe.rs  blake2s.rs  blockmodes.rs  blowfish.rs  buffer.rs  chacha20.rs  cryptoutil.rs  curve25519.rs  fortuna.rs  ghash.rs  hc128.rs  hmac.rs  rc4.rs  ripemd160.rs  scrypt.rs  sha1.rs  sha2.rs  sha3.rs  sosemanuk.rs  symmetriccipher.rs  util.rs  whirlpool.rs
Backend/libs/rustc-serialize-0.3.24/: Cargo.toml
Backend/libs/rustc-serialize-0.3.24/src/: json.rs  serialize.rs
Backend/rust_crypto/: Cargo.toml
Backend/rust_crypto/src/: lib.rs  rust_crypto.h
Console/cscrypto_2.1.1/: Cargo.toml  README.md
Console/cscrypto_2.1.1/src/: main.rs
Console/cscrypto_2.1.2/: Cargo.toml
Console/cscrypto_2.1.2/src/: main.rs
Desktop/: MainFrame.cpp  MainFrame.h  Makefile-linux  Makefile-mac  Makefile-win32  Makefile-win64  app.cpp  app.h
Desktop/res/: app.rc
UWP/CryptoDemo/: CryptoDemo.sln
UWP/CryptoDemo/CryptoDemo/: App.cpp  App.h  App.idl  App.xaml  CryptoDemo.vcxproj  CryptoDemo.vcxproj.filters  CryptoDemo_TemporaryKey.pfx  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  build_rust-lib.cmd  readme.txt
WebAssembly/crypto-demo/: Cargo.toml  LICENSE_MIT  package-lock.json
WebAssembly/crypto-demo-old/: Cargo.toml
WebAssembly/crypto-demo-old/src/: lib.rs
WebAssembly/crypto-demo/www/: index.html  index.js  package-lock.json  package.json  page-styles.css
iOS/CryptoDemo/: ._CryptoDemo.xcodeproj
iOS/CryptoDemo/CryptoDemo/: AppDelegate.swift  CryptoDemo-Bridging-Header.h  RustCrypto.h  RustCrypto.m  ViewController.swift
iOS/CryptoDemo/CryptoDemo.xcodeproj/: ._project.xcworkspace  project.pbxproj
iOS/CryptoDemo/CryptoDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/CryptoDemo/CryptoDemo.xcodeproj/project.xcworkspace/xcuserdata/owner.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/CryptoDemo/CryptoDemo.xcodeproj/project.xcworkspace/xcuserdata/tungthanhnguyen.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/CryptoDemo/CryptoDemo.xcodeproj/project.xcworkspace/xcuserdata/tungthanhnguyen.xcuserdatad/xcdebugger/: Expressions.xcexplist
iOS/CryptoDemo/CryptoDemo.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Release.xcscheme
iOS/CryptoDemo/CryptoDemo.xcodeproj/xcuserdata/owner.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/CryptoDemo/CryptoDemo.xcodeproj/xcuserdata/tungthanhnguyen.xcuserdatad/xcschemes/: CryptoDemo.xcscheme  xcschememanagement.plist
iOS/CryptoDemo/CryptoDemo/Base.lproj/: Main.storyboard
iOS/CryptoDemo/OptimizationProfiles/: CryptoDemo.profdata
