[package]
name = "rust-crypto"
version = "0.2.41"
authors = ["The Rust-Crypto Project Developers"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A (mostly) pure-Rust implementation of various common cryptographic algorithms."
keywords = [ "Crypto", "MD5", "Sha1", "Sha2", "AES" ]
readme = "README.md"
build = "build.rs"

[lib]
name = "crypto"

[features]
with-bench = []

[build-dependencies]
cc = "1.0.68"

[dependencies]
libc = "0.2.97"
time = "0.2.27"
rand = "0.8.4"
rustc-serialize = { version = "0.3.24", path = "../rustc-serialize-0.3.24" }
